--- a/test-output/old/Sample test Suite/classes.html
+++ b/test-output/old/Sample test Suite/classes.html
@@ -18,6 +18,10 @@
 <td>verifyHomePageHeader</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>takingscreenshots</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
