--- a/test-output/old/Sample test Suite/methods.html
+++ b/test-output/old/Sample test Suite/methods.html
@@ -1,20 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sample test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d8887">  <td>16/05/01 14:44:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">&gt;&gt;Beforesetup</td> 
+<tr bgcolor="7d8887">  <td>16/05/09 23:12:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">&gt;&gt;Beforesetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="db7f78">  <td>16/05/01 14:45:20</td>   <td>27368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyHomePageHeader()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">verifyHomePageHeader</td> 
+<tr bgcolor="db7f78">  <td>16/05/09 23:13:26</td>   <td>38913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.takingscreenshots()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">takingscreenshots</td> 
   <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="db7f78">  <td>16/05/01 14:45:22</td>   <td>29725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyPageHeader1()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">verifyPageHeader1</td> 
+<tr bgcolor="db7f78">  <td>16/05/09 23:13:29</td>   <td>42071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyHomePageHeader()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">verifyHomePageHeader</td> 
   <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/05/01 14:45:22</td>   <td>29754</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">&lt;&lt;Aftersetup</td> 
+<tr bgcolor="db7f78">  <td>16/05/09 23:13:30</td>   <td>43710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyPageHeader1()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">verifyPageHeader1</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="7d8887">  <td>16/05/09 23:13:30</td>   <td>43762</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">&lt;&lt;Aftersetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/05/01 14:45:24</td>   <td>31283</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">&gt;&gt;Beforesetup</td> 
+<tr bgcolor="7d8887">  <td>16/05/09 23:13:35</td>   <td>48294</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">&gt;&gt;Beforesetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="db7f78">  <td>16/05/01 14:46:00</td>   <td>67273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyHomePageHeader()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">verifyHomePageHeader</td> 
+<tr bgcolor="db7f78">  <td>16/05/09 23:14:00</td>   <td>73468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.takingscreenshots()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">takingscreenshots</td> 
   <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="db7f78">  <td>16/05/01 14:46:02</td>   <td>70009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyPageHeader1()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">verifyPageHeader1</td> 
+<tr bgcolor="db7f78">  <td>16/05/09 23:14:01</td>   <td>74700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyHomePageHeader()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">verifyHomePageHeader</td> 
   <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/05/01 14:46:02</td>   <td>70110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">&lt;&lt;Aftersetup</td> 
+<tr bgcolor="db7f78">  <td>16/05/09 23:14:01</td>   <td>74780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyPageHeader1()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">verifyPageHeader1</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="7d8887">  <td>16/05/09 23:14:02</td>   <td>74841</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">&lt;&lt;Aftersetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
 </table>
