--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,12 +48,12 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Sample_test_Suite">
-                    <span>D:\seleniumworkouts\demomaven\testng.xml</span>
+                    <span>D:\seleniumworkouts\demomaven\testngpoi.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Sample_test_Suite">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,22 +101,7 @@
                     <div class="method-list-content passed suite-Sample_test_Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Sample_test_Suite" title="org.demo.demomaven.toolstests" hash-for-method="verifyHomePageHeader">verifyHomePageHeader</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Sample_test_Suite" title="org.demo.demomaven.toolstests" hash-for-method="verifyHomePageHeader">verifyHomePageHeader</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Sample_test_Suite" title="org.demo.demomaven.toolstests" hash-for-method="verifyPageHeader1">verifyPageHeader1</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Sample_test_Suite" title="org.demo.demomaven.toolstests" hash-for-method="verifyPageHeader1">verifyPageHeader1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Sample_test_Suite" title="org.demo.demomaven.apachixltests" hash-for-method="aapachexlpoitests">aapachexlpoitests</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Sample_test_Suite -->
@@ -134,35 +119,14 @@
           <div class="suite-Sample_test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">org.demo.demomaven.toolstests</span>
+              <span class="class-name">org.demo.demomaven.apachixltests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyHomePageHeader">
-                  </a> <!-- verifyHomePageHeader -->
-                  <span class="method-name">verifyHomePageHeader</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyHomePageHeader">
-                  </a> <!-- verifyHomePageHeader -->
-                  <span class="method-name">verifyHomePageHeader</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyPageHeader1">
-                  </a> <!-- verifyPageHeader1 -->
-                  <span class="method-name">verifyPageHeader1</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyPageHeader1">
-                  </a> <!-- verifyPageHeader1 -->
-                  <span class="method-name">verifyPageHeader1</span>
+                  <a name="aapachexlpoitests">
+                  </a> <!-- aapachexlpoitests -->
+                  <span class="method-name">aapachexlpoitests</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -170,7 +134,7 @@
         </div> <!-- panel Sample_test_Suite -->
         <div panel-name="test-xml-Sample_test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\seleniumworkouts\demomaven\testng.xml</span>
+            <span class="header-content">D:\seleniumworkouts\demomaven\testngpoi.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,15 +144,9 @@
   &lt;test name=&quot;Sample test&quot;&gt;
     &lt;parameter name=&quot;browserName&quot; value=&quot;FF&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;org.demo.demomaven.toolstests&quot;/&gt;
+      &lt;class name=&quot;org.demo.demomaven.apachixltests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Sample test --&gt;
-  &lt;test name=&quot;Sample test1&quot;&gt;
-    &lt;parameter name=&quot;browserName&quot; value=&quot;chrome&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;org.demo.demomaven.toolstests&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Sample test1 --&gt;
 &lt;/suite&gt; &lt;!-- Sample test Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -201,9 +159,6 @@
             <ul>
               <li>
                 <span class="test-name">Sample test (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Sample test1 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -229,28 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyHomePageHeader')
-data.setCell(0, 2, 'org.demo.demomaven.toolstests')
-data.setCell(0, 3, 2734);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyHomePageHeader')
-data.setCell(1, 2, 'org.demo.demomaven.toolstests')
-data.setCell(1, 3, 2356);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyPageHeader1')
-data.setCell(2, 2, 'org.demo.demomaven.toolstests')
-data.setCell(2, 3, 101);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyPageHeader1')
-data.setCell(3, 2, 'org.demo.demomaven.toolstests')
-data.setCell(3, 3, 28);
+data.setCell(0, 1, 'aapachexlpoitests')
+data.setCell(0, 2, 'org.demo.demomaven.apachixltests')
+data.setCell(0, 3, 15386);
 window.suiteTableData['Sample_test_Suite']= { tableData: data, tableDiv: 'times-div-Sample_test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Sample_test_Suite">
               </div> <!-- times-div-Sample_test_Suite -->
             </div> <!-- times-div -->
@@ -276,39 +219,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">org.demo.demomaven.toolstests</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
+              <div class="chronological-class-name">org.demo.demomaven.apachixltests</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
                 <span class="method-name">Beforesetup(FF)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyHomePageHeader</span>
-                <span class="method-start">27372 ms</span>
+                <span class="method-name">aapachexlpoitests</span>
+                <span class="method-start">12527 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyPageHeader1</span>
-                <span class="method-start">29729 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
+              <div class="configuration-method after">
                 <span class="method-name">Aftersetup</span>
-                <span class="method-start">29758 ms</span>
-              </div> <!-- configuration-class after -->
-              <div class="configuration-class before">
-                <span class="method-name">Beforesetup(chrome)</span>
-                <span class="method-start">31287 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">verifyHomePageHeader</span>
-                <span class="method-start">67277 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyPageHeader1</span>
-                <span class="method-start">70013 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">Aftersetup</span>
-                <span class="method-start">70114 ms</span>
-              </div> <!-- configuration-class after -->
+                <span class="method-start">27914 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
