--- a/test-output/old/Sample test Suite/classes.html
+++ b/test-output/old/Sample test Suite/classes.html
@@ -4,37 +4,33 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>org.demo.demomaven.toolstests</td>
+<td>org.demo.demomaven.apachixltests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPageHeader1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyHomePageHeader</td>
+<td>aapachexlpoitests</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>Beforesetup</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>Aftersetup</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 </table>
