--- a/test-output/old/Sample test Suite/methods.html
+++ b/test-output/old/Sample test Suite/methods.html
@@ -1,20 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sample test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d8887">  <td>16/05/01 14:44:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">&gt;&gt;Beforesetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="db7f78">  <td>16/05/01 14:45:20</td>   <td>27368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyHomePageHeader()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">verifyHomePageHeader</td> 
-  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="db7f78">  <td>16/05/01 14:45:22</td>   <td>29725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyPageHeader1()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">verifyPageHeader1</td> 
-  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/05/01 14:45:22</td>   <td>29754</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@233c0b17]">&lt;&lt;Aftersetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/05/01 14:45:24</td>   <td>31283</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">&gt;&gt;Beforesetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="db7f78">  <td>16/05/01 14:46:00</td>   <td>67273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyHomePageHeader()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">verifyHomePageHeader</td> 
-  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="db7f78">  <td>16/05/01 14:46:02</td>   <td>70009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyPageHeader1()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">verifyPageHeader1</td> 
-  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="7d8887">  <td>16/05/01 14:46:02</td>   <td>70110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@4563e9ab]">&lt;&lt;Aftersetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>16/05/30 12:15:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.apachixltests@6ad5c04e]">&gt;&gt;Beforesetup</td> 
+<td>&nbsp;</td>  <td>main@434091818</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>16/05/30 12:15:33</td>   <td>12517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="apachixltests.aapachexlpoitests()[pri:0, instance:org.demo.demomaven.apachixltests@6ad5c04e]">aapachexlpoitests</td> 
+  <td>main@434091818</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>16/05/30 12:15:48</td>   <td>27904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.apachixltests@6ad5c04e]">&lt;&lt;Aftersetup</td> 
+<td>&nbsp;</td>  <td>main@434091818</td>   <td></td> </tr>
 </table>
