--- a/test-output/old/Sample test Suite/methods-alphabetical.html
+++ b/test-output/old/Sample test Suite/methods-alphabetical.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sample test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3a17d">  <td>16/05/30 12:15:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.apachixltests@6ad5c04e]">&lt;&lt;Aftersetup</td> 
-<td>&nbsp;</td>  <td>main@434091818</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>16/05/30 12:15:20</td>   <td>-27904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.apachixltests@6ad5c04e]">&gt;&gt;Beforesetup</td> 
-<td>&nbsp;</td>  <td>main@434091818</td>   <td></td> </tr>
-<tr bgcolor="a793a8">  <td>16/05/30 12:15:33</td>   <td>-15387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="apachixltests.aapachexlpoitests()[pri:0, instance:org.demo.demomaven.apachixltests@6ad5c04e]">aapachexlpoitests</td> 
-  <td>main@434091818</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/06/02 17:24:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@3ab39c39]">&lt;&lt;Aftersetup</td> 
+<td>&nbsp;</td>  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/06/02 17:25:20</td>   <td>20145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@3ab39c39]">&lt;&lt;Aftersetup</td> 
+<td>&nbsp;</td>  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/06/02 17:25:51</td>   <td>51089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@75bd9247]">&lt;&lt;Aftersetup</td> 
+<td>&nbsp;</td>  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/06/02 17:26:00</td>   <td>60479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;congig.Aftersetup()[pri:0, instance:org.demo.demomaven.toolstests@75bd9247]">&lt;&lt;Aftersetup</td> 
+<td>&nbsp;</td>  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/06/02 17:24:25</td>   <td>-34696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@3ab39c39]">&gt;&gt;Beforesetup</td> 
+<td>&nbsp;</td>  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/06/02 17:25:04</td>   <td>4619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@3ab39c39]">&gt;&gt;Beforesetup</td> 
+<td>&nbsp;</td>  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/06/02 17:25:22</td>   <td>22563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@75bd9247]">&gt;&gt;Beforesetup</td> 
+<td>&nbsp;</td>  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/06/02 17:25:52</td>   <td>52471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;congig.Beforesetup(java.lang.String)[pri:0, instance:org.demo.demomaven.toolstests@75bd9247]">&gt;&gt;Beforesetup</td> 
+<td>&nbsp;</td>  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>16/06/02 17:24:59</td>   <td>-724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyHomePageHeader()[pri:0, instance:org.demo.demomaven.toolstests@3ab39c39]">verifyHomePageHeader</td> 
+  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>16/06/02 17:25:51</td>   <td>51044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyHomePageHeader()[pri:0, instance:org.demo.demomaven.toolstests@75bd9247]">verifyHomePageHeader</td> 
+  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>16/06/02 17:25:19</td>   <td>19810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyPageHeader1()[pri:0, instance:org.demo.demomaven.toolstests@3ab39c39]">verifyPageHeader1</td> 
+  <td>main@1504109395</td>   <td></td> </tr>
+<tr bgcolor="a793a8">  <td>16/06/02 17:26:00</td>   <td>60435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toolstests.verifyPageHeader1()[pri:0, instance:org.demo.demomaven.toolstests@75bd9247]">verifyPageHeader1</td> 
+  <td>main@1504109395</td>   <td></td> </tr>
 </table>
